// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages periodtype should render correctly 1`] = `
<Component
  description="Period Type selection page of the Fares Data Build Tool"
  errors={Array []}
  title="Period Type - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/periodType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="period-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="period-type-page-heading"
          >
            Select a type of period ticket
          </h1>
        </legend>
        <FormElementWrapper
          errorClass="govuk-radios--errors"
          errorId="period-type-geo-zone"
          errors={Array []}
        >
          <div
            className="govuk-radios"
          >
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input  "
                id="period-type-geo-zone"
                name="periodType"
                type="radio"
                value="periodGeoZone"
              />
              <label
                className="govuk-label govuk-radios__label"
                htmlFor="period-type-geo-zone"
              >
                A ticket within a geographical zone
              </label>
            </div>
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input  "
                id="period-type-single-set-service"
                name="periodType"
                type="radio"
                value="periodMultipleServices"
              />
              <label
                className="govuk-label govuk-radios__label"
                htmlFor="period-type-single-set-service"
              >
                A ticket for some or all of your network of services
              </label>
            </div>
            <div
              className="govuk-radios__item"
            >
              <input
                aria-disabled="true"
                className="govuk-radios__input  "
                disabled={true}
                id="period-type-network"
                name="periodType"
                type="radio"
                value="periodMultipleOperators"
              />
              <label
                className="govuk-label govuk-radios__label"
                htmlFor="period-type-network"
              >
                A ticket for services across multiple operators (Not yet available)
              </label>
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;

exports[`pages periodtype should render error messaging when errors are passed 1`] = `
<Component
  description="Period Type selection page of the Fares Data Build Tool"
  errors={
    Array [
      Object {
        "errorMessage": "Choose an option regarding your period ticket type",
        "id": "period-type-error",
      },
    ]
  }
  title="Period Type - Fares Data Build Tool"
>
  <CsrfForm
    action="/api/periodType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose an option regarding your period ticket type",
            "id": "period-type-error",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="period-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="period-type-page-heading"
          >
            Select a type of period ticket
          </h1>
        </legend>
        <FormElementWrapper
          errorClass="govuk-radios--errors"
          errorId="period-type-geo-zone"
          errors={
            Array [
              Object {
                "errorMessage": "Choose an option regarding your period ticket type",
                "id": "period-type-error",
              },
            ]
          }
        >
          <div
            className="govuk-radios"
          >
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input govuk-input--error "
                id="period-type-geo-zone"
                name="periodType"
                type="radio"
                value="periodGeoZone"
              />
              <label
                className="govuk-label govuk-radios__label"
                htmlFor="period-type-geo-zone"
              >
                A ticket within a geographical zone
              </label>
            </div>
            <div
              className="govuk-radios__item"
            >
              <input
                className="govuk-radios__input govuk-input--error "
                id="period-type-single-set-service"
                name="periodType"
                type="radio"
                value="periodMultipleServices"
              />
              <label
                className="govuk-label govuk-radios__label"
                htmlFor="period-type-single-set-service"
              >
                A ticket for some or all of your network of services
              </label>
            </div>
            <div
              className="govuk-radios__item"
            >
              <input
                aria-disabled="true"
                className="govuk-radios__input govuk-input--error "
                disabled={true}
                id="period-type-network"
                name="periodType"
                type="radio"
                value="periodMultipleOperators"
              />
              <label
                className="govuk-label govuk-radios__label"
                htmlFor="period-type-network"
              >
                A ticket for services across multiple operators (Not yet available)
              </label>
            </div>
          </div>
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</Component>
`;
